nav 分頁連結設定

--- a/html/Cat_ShoppingStore.html
+++ b/html/Cat_ShoppingStore.html
@@ -6,7 +6,7 @@
 	<title>Document</title>
 
 	<link rel="stylesheet" href="../css/animate.css">
-	
+
 	<link rel="stylesheet" href="../css/fontawesome.min.css">
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -32,28 +32,28 @@
 
 	<header>
 		<div class="logo">
-			<a href="../index.html">
+			<a href="index.html">
 				<h1>
-					<img src="../img/logo_white.png" alt="尋喵啟事" title="回首頁">
+					<img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
 				</h1>
 			</a>
 		</div>
 		<nav>
 			<ul>
 				<li>
-					<a href="#">尋喵</a>
+					<a href="./catSearch.html">尋喵</a>
 				</li>
 				<li>
-					<a href="##1">中途之家</a>
+					<a href="./halfway_house_search.html">中途之家</a>
 				</li>
 				<li>
-					<a href="#">商城</a>
+					<a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
 				</li>
 				<li>
-					<a href="#">討論區</a>
+					<a href="./forum.html">討論區</a>
 				</li>
 				<li>
-					<a href="#">會員專區</a>
+					<a href="./member.html">會員專區</a>
 				</li>
 			</ul>
 		</nav>
@@ -74,56 +74,57 @@
 	<div class="wrap">
 		<div class="wrapCenter">
 			<div class="title">
-				尋喵啟事 <span>SHOPPING STORE</span>
+				尋喵啟事
+				<span>SHOPPING STORE</span>
 			</div>
-	
+
 			<div class="menu">
-	
+
 				<a href="Cat_ShoppingStore.html" class="menuTitle menuNow ">全部喵喵商品</a>
-	
+
 				<a href="Cat_ShoppingStore_food.html" class="menuTitle">喵喵肚子餓</a>
 				<!-- <li><a href="#">喵飼料</a></li>
 							<li><a href="#">喵零食</a></li>
 							<li><a href="#">喵罐頭</a></li> -->
-	
+
 				<a href="#" class="menuTitle">喵喵待在家</a>
 				<!-- 	<li><a href="#">喵毛處理</a></li>
 							<li><a href="#">精選喵砂</a></li>
 							<li><a href="#">喵喵想睡覺</a></li>-->
-	
+
 				<a href="#" class="menuTitle">精選喵草</a>
-	
+
 				<a href="#" class="menuTitle">喵喵愛玩耍</a>
-	
+
 			</div>
-	
+
 			<div class="banner  wow zoomIn">
 				<img src="../img/shoppingBanner.jpg">
 			</div>
-	
-	
+
+
 			<!-- <div class="hr"></div>
 					<div class="allTitle">喵喵肚子餓</div>
 					<div class="hr hr2"></div> -->
-	
+
 			<form>
-	
+
 				<select name="YourLocation" class="select">
 					<option value="Taipei">價格由高到低</option>
 					<option value="Taoyuan">價格由低到高</option>
 				</select>
 			</form>
-	
+
 			<div class="search">
 				<input type="text" placeholder="尋 找 喵 喵 商 品">
 				<i class="fa fa-search" aria-hidden="true"></i>
 			</div>
-	
+
 			<br>
 			<br>
-	
-	
-	
+
+
+
 			<div class="allProduct">
 				<div class="type1">
 					<div class="typeName wow zoomIn">喵喵肚子餓</div>
@@ -133,103 +134,103 @@
 					</div>
 				</div>
 				<div class="type2">
-	
+
 					<div class="product">
 						<a href="Cat_ShoppingStore_product.html">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Friskies
 							<br>雞肉罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food2.jpg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>美味飼料
 						</div>
-	
+
 						<div class="cost">
 							$900
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food3.JPG">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>雞肉口味飼料
 						</div>
-	
+
 						<div class="cost">
 							$120
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food4.jpeg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							FancyFeast
 							<br>鮪魚大餐
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>咖哩罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-					
+
 					<div class="typeBannerRWD  wow zoomIn">
 						<a href="Cat_ShoppingStore_food.html">前往
 							<b>喵喵肚子餓</b> ｜ 30 項商品</a>
 					</div>
-	
-	
-	
+
+
+
 				</div>
 			</div>
-	
-	
+
+
 			<div class="allProduct">
 				<div class="type1">
 					<div class="typeName wow zoomIn">喵喵待在家</div>
@@ -239,102 +240,102 @@
 					</div>
 				</div>
 				<div class="type2">
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Friskies
 							<br>雞肉罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food2.jpg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>美味飼料
 						</div>
-	
+
 						<div class="cost">
 							$900
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food3.JPG">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>雞肉口味飼料
 						</div>
-	
+
 						<div class="cost">
 							$120
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food4.jpeg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							FancyFeast
 							<br>鮪魚大餐
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>咖哩罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="typeBannerRWD wow zoomIn">
 						<a href="#">前往
 							<b>喵喵待在家</b> ｜ 46 項商品</a>
 					</div>
-	
-	
+
+
 				</div>
 			</div>
-	
-	
+
+
 			<div class="allProduct">
 				<div class="type1">
 					<div class="typeName wow zoomIn">精選喵草</div>
@@ -344,102 +345,102 @@
 					</div>
 				</div>
 				<div class="type2">
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Friskies
 							<br>雞肉罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food2.jpg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>美味飼料
 						</div>
-	
+
 						<div class="cost">
 							$900
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food3.JPG">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>雞肉口味飼料
 						</div>
-	
+
 						<div class="cost">
 							$120
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food4.jpeg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							FancyFeast
 							<br>鮪魚大餐
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>咖哩罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="typeBannerRWD wow zoomIn">
 						<a href="#">前往
 							<b>精選喵草</b> ｜ 46 項商品</a>
 					</div>
-	
-	
+
+
 				</div>
 			</div>
-	
-	
+
+
 			<div class="allProduct">
 				<div class="type1">
 					<div class="typeName wow zoomIn">喵喵愛玩耍</div>
@@ -449,98 +450,98 @@
 					</div>
 				</div>
 				<div class="type2">
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Friskies
 							<br>雞肉罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food2.jpg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>美味飼料
 						</div>
-	
+
 						<div class="cost">
 							$900
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food3.JPG">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>雞肉口味飼料
 						</div>
-	
+
 						<div class="cost">
 							$120
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food4.jpeg">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							FancyFeast
 							<br>鮪魚大餐
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="product rwd">
 						<a href="#">
 							<div class="pic  wow zoomIn">
 								<img src="../img/food1.png">
 							</div>
 						</a>
-	
+
 						<div class="text">
 							Whiskas
 							<br>咖哩罐頭
 						</div>
-	
+
 						<div class="cost">
 							$1000
 						</div>
 					</div>
-	
+
 					<div class="typeBannerRWD wow zoomIn">
 						<a href="#">前往
 							<b>喵喵愛玩耍</b> ｜ 46 項商品</a>
 					</div>
-	
-	
+
+
 				</div>
 			</div>
 		</div>
