--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -74,26 +74,26 @@
 		<div class="logo">
 			<a href="index.html">
 				<h1>
-					<img src="../images/logo_white.png" alt="尋喵啟事">
+					<img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
 				</h1>
 			</a>
 		</div>
 		<nav>
 			<ul>
 				<li>
-					<a href="catSearch.html">尋喵</a>
+					<a href="./catSearch.html">尋喵</a>
 				</li>
 				<li>
-					<a href="halfway_house_search.html">中途之家</a>
+					<a href="./halfway_house_search.html">中途之家</a>
 				</li>
 				<li>
-					<a href="Cat_ShoppingStore.html">商城</a>
+					<a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
 				</li>
 				<li>
-					<a href="#">討論區</a>
+					<a href="./forum.html">討論區</a>
 				</li>
 				<li>
-					<a href="#">會員專區</a>
+					<a href="./member.html">會員專區</a>
 				</li>
 			</ul>
 		</nav>
@@ -112,7 +112,9 @@
 	</header>
 	<div class="right">
 		<div class="container container1">
-			<h1>尋喵<br><small class="selectTitle">搜尋你的喵喵</small>
+			<h1>尋喵
+				<br>
+				<small class="selectTitle">搜尋你的喵喵</small>
 			</h1>
 			<form method="POST" action="#" class='selectForm'>
 				<div>
