--- a/html/header.html
+++ b/html/header.html
@@ -14,26 +14,28 @@
 <body>
     <header>
         <div class="logo">
-            <a href="../index.html">
-                <h1><img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁"></h1>
+            <a href="index.html">
+                <h1>
+                    <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
+                </h1>
             </a>
         </div>
         <nav>
             <ul>
                 <li>
-                    <a href="#">尋喵</a>
+                    <a href="./catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="##1">中途之家</a>
+                    <a href="./halfway_house_search.html">中途之家</a>
                 </li>
                 <li>
-                    <a href="#">商城</a>
+                    <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="#">討論區</a>
+                    <a href="./forum.html">討論區</a>
                 </li>
                 <li>
-                    <a href="#">會員專區</a>
+                    <a href="./member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
