--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
     <!-- header -->
     <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="index.html">
                 <h1>
                     <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
