--- a/html/member.html
+++ b/html/member.html
@@ -13,7 +13,7 @@
 <body onload="getData('memInfo.html');">
     <header>
         <div class="logo">
-            <a href="../index.html">
+            <a href="index.html">
                 <h1>
                     <img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
                 </h1>
@@ -22,19 +22,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./catSearch.html" title="前往尋喵">尋喵</a>
+                    <a href="./catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="##1">中途之家</a>
+                    <a href="./halfway_house_search.html">中途之家</a>
                 </li>
                 <li>
-                    <a href="#">商城</a>
+                    <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="#">討論區</a>
+                    <a href="./forum.html">討論區</a>
                 </li>
                 <li>
-                    <a href="#">會員專區</a>
+                    <a href="./member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
@@ -81,7 +81,7 @@
             </div>
 
             <div class="content" id="content">
-                
+
             </div>
         </div>
     </div>
