nav 連結變更 + navNow

--- a/html/Cat_ShoppingStore_food.html
+++ b/html/Cat_ShoppingStore_food.html
@@ -41,19 +41,19 @@
 		<nav>
 			<ul>
 				<li>
-					<a href="#">尋喵</a>
+					<a href="./catSearch.html">尋喵</a>
 				</li>
 				<li>
-					<a href="##1">中途之家</a>
+					<a href="./halfway_house_search.html">中途之家</a>
 				</li>
 				<li>
-					<a href="#">商城</a>
+					<a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
 				</li>
 				<li>
-					<a href="#">討論區</a>
+					<a href="./member.html">討論區</a>
 				</li>
 				<li>
-					<a href="#">會員專區</a>
+					<a href="./forum.html">會員專區</a>
 				</li>
 			</ul>
 		</nav>
@@ -75,7 +75,8 @@
 	<div class="wrap">
 		<div class="wrapCenter">
 			<div class="title">
-				尋喵啟事 <span>SHOPPING STORE</span>
+				尋喵啟事
+				<span>SHOPPING STORE</span>
 			</div>
 
 			<div class="menu">
