--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -24,19 +24,19 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">尋喵</a>
+                    <a href="./catSearch.html">尋喵</a>
                 </li>
                 <li>
-                    <a href="##1">中途之家</a>
+                    <a href="./halfway_house_search.html">中途之家</a>
                 </li>
                 <li>
-                    <a href="#">商城</a>
+                    <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="#">討論區</a>
+                    <a href="./member.html">討論區</a>
                 </li>
                 <li>
-                    <a href="#">會員專區</a>
+                    <a href="./forum.html">會員專區</a>
                 </li>
             </ul>
         </nav>
@@ -90,7 +90,8 @@
                     <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
                 </fieldset>
                 <div class="text">
-                    總平均 <span>4.6</span> /5 顆星 (共10人評分)
+                    總平均
+                    <span>4.6</span> /5 顆星 (共10人評分)
                 </div>
             </div>
         </div>
