--- a/html/index.html
+++ b/html/index.html
@@ -121,7 +121,7 @@
                     </div>
                     <img class="cat-ask" src="../images/cat_ask.png" alt="cat ask">
                 </div>
-                <div class="game-point-bottom">
+                <div class="game-point-bottom" id="gamePointBottom">
                     <img class="people" src="../images/cat_ask_people.png" alt="cat ask people">
                     <div class="option-area option-area-a">
                         <!-- <div class="option-a-front"></div>
