--- a/html/index.html
+++ b/html/index.html
@@ -122,7 +122,7 @@
                     <img class="cat-ask" src="../images/cat_ask.png" alt="cat ask">
                 </div>
                 <div class="game-point-bottom" id="gamePointBottom">
-                    <img class="people" src="../images/cat_ask_people.png" alt="cat ask people">
+                    <img class="people" id="people" src="../images/cat_ask_people.png" alt="cat ask people">
                     <div class="option-area option-area-a">
                         <!-- <div class="option-a-front"></div>
                         <div class="option-a-backed"></div> -->
@@ -131,7 +131,7 @@
                         <!-- <div class="option-b-front"></div>
                         <div class="option-b-backed"></div> -->
                     </div>
-                    <img class="hug" src="../images/cat_cat.png" alt="hug cat">
+                    <img class="hug" id="hug" src="../images/cat_cat.png" alt="hug cat">
                 </div>
             </div>
         </div>
