--- a/html/index.html
+++ b/html/index.html
@@ -123,13 +123,13 @@
                 </div>
                 <div class="game-point-bottom" id="gamePointBottom">
                     <img class="people" id="people" src="../images/cat_ask_people.png" alt="cat ask people">
-                    <div class="option-area option-area-a">
-                        <!-- <div class="option-a-front"></div>
-                        <div class="option-a-backed"></div> -->
+                    <div class="option-area option-area-a" id="correct">
+                        <div class="option-a-front"></div>
+                        <div class="option-a-backed"></div>
                     </div>
-                    <div class="option-area option-area-b">
-                        <!-- <div class="option-b-front"></div>
-                        <div class="option-b-backed"></div> -->
+                    <div class="option-area option-area-b"  id="err">
+                        <div class="option-b-front"></div>
+                        <div class="option-b-backed"></div>
                     </div>
                     <img class="hug" id="hug" src="../images/cat_cat.png" alt="hug cat">
                 </div>
