--- a/html/index.html
+++ b/html/index.html
@@ -21,6 +21,7 @@
     <div id="loading">
         <img src="../images/loading.svg" id="loadingCat" alt="loading">
     </div>
+
     <!-- header -->
     <header>
         <div class="logo">
@@ -42,10 +43,10 @@
                     <a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
                 </li>
                 <li>
-                    <a href="./member.html">討論區</a>
+                    <a href="./forum.html">討論區</a>
                 </li>
                 <li>
-                    <a href="./forum.html">會員專區</a>
+                    <a href="./member.html">會員專區</a>
                 </li>
             </ul>
         </nav>
@@ -53,7 +54,7 @@
             <a href="#">
                 <i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i>
             </a>
-            <a href="#">
+            <a href="#" class="login">
                 <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
             </a>
             <a href="#">
@@ -124,10 +125,10 @@
                 <div class="game-point-bottom" id="gamePointBottom">
                     <img class="people" id="people" src="../images/cat_ask_people.png" alt="cat ask people">
                     <div class="option-area option-area-a" id="correct">
-                        <div class="option-a-front"></div>
+                        <div class="option-a-front">asdsadasdsadsadsadsadsad</div>
                         <div class="option-a-backed"></div>
                     </div>
-                    <div class="option-area option-area-b"  id="err">
+                    <div class="option-area option-area-b" id="err">
                         <div class="option-b-front"></div>
                         <div class="option-b-backed"></div>
                     </div>
@@ -394,6 +395,64 @@
             </footer>
         </div>
     </div>
+    <div class="signUpLightboxBlack"></div>
+    <div class="signUpLightbox" id="loginBox">
+        <i class="fa fa-times cancel"></i>
+        <div class="bgImg"></div>
+        <div class="formShape">
+            <div class="chioce">
+                <button id="halfMember">中途之家會員</button>
+                <button id="member" class="selected">一般會員</button>
+            </div>
+            <form action="#1" id="signUpForm">
+                <label for="userName">會員暱稱
+                    <br>
+                    <small>不得多於8個中/英文字元</small>
+                </label>
+                <input type="text" id="userName" placeholder="請輸入您的暱稱" required>
+                <br>
+                <label for="userId">會員帳號
+                    <br>
+                    <small>請輸入您的電子郵件</small>
+                </label>
+                <input type="email" id="userId" placeholder="請輸入您的電子郵件" required>
+                <br>
+                <label for="userPsw">會員密碼
+                    <br>
+                    <small>請輸入6~10碼英數字</small>
+                </label>
+                <input type="password" id="userPsw" placeholder="請輸入您的密碼" required>
+                <br>
+                <label for="userTel">聯絡電話
+                    <br>
+                    <small></small>
+                </label>
+                <input type="tel" id="userTel" placeholder="請輸入您的手機號碼" required>
+                <br>
+                <label for="userBirth">會員生日
+                    <br>
+                    <small></small>
+                </label>
+                <input type="text" id="userBirth" placeholder="ex:19900101" required>
+                <br>
+                <label for="userAddress">通訊地址
+                    <br>
+                    <small></small>
+                </label>
+                <input type="text" id="userAddress" placeholder="請輸入您的地址" required>
+                <br>
+                <div class="chioce">
+                    <label for="userPhoto" class="formBtn">
+                        點我上傳您的大頭貼
+                    </label>
+                    <input type="file" id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
+                    <input type="submit" id="loginBoxSubmit" class="formBtn formSubmitBtn" value="確認註冊">
+                    <input type="reset" class="formBtn formSubmitBtn" value="清除重填">
+                </div>
+            </form>
+        </div>
+    </div>
+    <script src="../js/signUp.js"></script>
     <script>
         window.addEventListener('load', function () {
             let list = document.getElementById('kit-list');
