--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -227,7 +227,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_1_resized.jpg" alt="喵航航">
+								<img src="../images/catUpload/album_img_1_resized.jpg" alt="喵航航">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -247,7 +247,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_2_resized.jpg" alt="喵辛巴">
+								<img src="../images/catUpload/album_img_2_resized.jpg" alt="喵辛巴">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -267,7 +267,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_3_resized.jpg" alt="喵芽芽">
+								<img src="../images/catUpload/album_img_3_resized.jpg" alt="喵芽芽">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -287,7 +287,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_4_resized.jpg" alt="喵蝦米">
+								<img src="../images/catUpload/album_img_4_resized.jpg" alt="喵蝦米">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -307,7 +307,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_5_resized.jpg" alt="喵絨絨">
+								<img src="../images/catUpload/album_img_5_resized.jpg" alt="喵絨絨">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -327,7 +327,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_6_resized.jpg" alt="喵咪醬">
+								<img src="../images/catUpload/album_img_6_resized.jpg" alt="喵咪醬">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -347,7 +347,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_7_resized.jpg" alt="喵皮皮">
+								<img src="../images/catUpload/album_img_7_resized.jpg" alt="喵皮皮">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -367,7 +367,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_8_resized.jpg" alt="喵默默">
+								<img src="../images/catUpload/album_img_8_resized.jpg" alt="喵默默">
 							</div>
 						</a>
 						<button type="button" class="quickView">
@@ -387,7 +387,7 @@
 					<div class="catContent">
 						<a href="catContent.html">
 							<div class="img">
-								<img src="../../images/catUpload/album_img_9_resized.jpg" alt="喵追風">
+								<img src="../images/catUpload/album_img_9_resized.jpg" alt="喵追風">
 							</div>
 						</a>
 						<button type="button" class="quickView">
