--- a/html/index.html
+++ b/html/index.html
@@ -113,19 +113,19 @@
             <!-- 分數遊戲 -->
             <div class="game-point">
                 <div class="game-point-title">
-                    <h2>lalala</h2>
-                    <h3>QQQ!</h3>
+                    <h2>適合養喵小孩嗎?</h2>
+                    <h3>Precautions</h3>
                 </div>
                 <div class="game-point-top">
                     <div class="askBox">
-                        <span id="questions">好好好 你咕咕咕咕咕咕咕咕雞雞叫</span>
+                        <span id="questions">這是一個題目</span>
                     </div>
                     <img class="cat-ask" src="../images/cat_ask.png" alt="cat ask">
                 </div>
                 <div class="game-point-bottom" id="gamePointBottom">
                     <img class="people" id="people" src="../images/cat_ask_people.png" alt="cat ask people">
                     <div class="option-area option-area-a" id="correct">
-                        <div class="option-a-front">asdsadasdsadsadsadsadsad</div>
+                        <div class="option-a-front"></div>
                         <div class="option-a-backed"></div>
                     </div>
                     <div class="option-area option-area-b" id="err">
