footer再也不用import啦 另外把麵包屑做好了可以來catSearch.html找className = 'breadcrumb'的div 耶嘿

--- a/html/catContent.html
+++ b/html/catContent.html
@@ -112,6 +112,11 @@
 	</header>
 	<div class="right">
 		<div class="container container1">
+			<div class="breadcrumbs">
+				<a href="index.html" class="defaultBtn">尋喵啟事</a> >
+				<a href="catSearch.html" class="defaultBtn">尋喵</a> >
+				<a href="catContent.html" class="defaultBtn">喵航航</a>
+			</div>
 			<picture class="catItem">
 				<div class="img">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
