--- a/html/index.html
+++ b/html/index.html
@@ -117,6 +117,7 @@
                     <h3>Precautions</h3>
                 </div>
                 <div class="game-point-top">
+
                     <div class="askBox">
                         <span id="questions">這是一個題目</span>
                     </div>
@@ -124,13 +125,9 @@
                 </div>
                 <div class="game-point-bottom" id="gamePointBottom">
                     <img class="people" id="people" src="../images/cat_ask_people.png" alt="cat ask people">
-                    <div class="option-area option-area-a" id="correct">
-                        <div class="option-a-front"></div>
-                        <div class="option-a-backed"></div>
+                    <div class="option-area option-area-a" id="optionA">
                     </div>
-                    <div class="option-area option-area-b" id="err">
-                        <div class="option-b-front"></div>
-                        <div class="option-b-backed"></div>
+                    <div class="option-area option-area-b" id="optionB">
                     </div>
                     <img class="hug" id="hug" src="../images/cat_cat.png" alt="hug cat">
                 </div>
@@ -254,7 +251,7 @@
                 <div class="half-item">
                     <div class="half-qty">
                         <img src="../images/number5.png" alt="5">
-                        <img src="../images/number8.png" alt="8"> 隻喵喵
+                        <img src="../images/number8.png" alt="8"> 隻喵喵待領養
                     </div>
                     </a>
                     <div class="half-pic"></div>
@@ -263,13 +260,13 @@
                         <span class="half-address">台北市信義區信義路四段88號</span>
                         <span class="half-tel">02-2777-6666</span>
                         <span class="half-time">營業時間 : 10:00~20:00</span>
-                        <a href="#" class="read-more">Read more..</a>
+                        <a href="#" class="read-more">前往領養</a>
                     </div>
                 </div>
                 <div class="half-item">
                     <div class="half-qty">
                         <img src="../images/number3.png" alt="3">
-                        <img src="../images/number6.png" alt="6"> 隻喵喵
+                        <img src="../images/number6.png" alt="6"> 隻喵喵待領養
                     </div>
                     <div class="half-pic"></div>
                     <div class="half-text">
@@ -277,13 +274,13 @@
                         <span class="half-address">台北市信義區信義路四段88號</span>
                         <span class="half-tel">02-2777-6666</span>
                         <span class="half-time">營業時間 : 10:00~20:00</span>
-                        <a href="#" class="read-more">Read more..</a>
+                        <a href="#" class="read-more">前往領養</a>
                     </div>
                 </div>
                 <div class="half-item">
                     <div class="half-qty">
                         <img src="../images/number2.png" alt="2">
-                        <img src="../images/number8.png" alt="8"> 隻喵喵
+                        <img src="../images/number8.png" alt="8"> 隻喵喵待領養
                     </div>
                     <div class="half-pic"></div>
                     <div class="half-text">
@@ -291,7 +288,7 @@
                         <span class="half-address">台北市信義區信義路四段88號</span>
                         <span class="half-tel">02-2777-6666</span>
                         <span class="half-time">營業時間 : 10:00~20:00</span>
-                        <a href="#" class="read-more">Read more..</a>
+                        <a href="#" class="read-more">前往領養</a>
                     </div>
                 </div>
                 <div class="more">
