--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -22,11 +22,11 @@
 				<button id="member" class="selected">一般會員</button>
 			</div>
 			<form action="#1" id="signUpForm">
-				<label for="userName">會員暱稱
+				<label for="userName">會員名稱
 					<br>
 					<small>不得多於8個中/英文字元</small>
 				</label>
-				<input type="text" id="userName" placeholder="請輸入您的暱稱" required>
+				<input type="text" id="userName" placeholder="請輸入您的名稱" required>
 				<br>
 				<label for="userId">會員帳號
 					<br>
@@ -42,24 +42,21 @@
 				<br>
 				<label for="userTel">聯絡電話
 					<br>
-					<small></small>
 				</label>
 				<input type="tel" id="userTel" placeholder="請輸入您的手機號碼" required>
 				<br>
 				<label for="userBirth">會員生日
 					<br>
-					<small></small>
 				</label>
 				<input type="text" id="userBirth" placeholder="ex:19900101" required>
 				<br>
 				<label for="userAddress">通訊地址
 					<br>
-					<small></small>
 				</label>
 				<input type="text" id="userAddress" placeholder="請輸入您的地址" required>
 				<br>
 				<div class="chioce">
-					<label for="userPhoto" class="formBtn">
+					<label for="userPhoto" class="formBtn" id="userPhotoLabel">
 						點我上傳您的大頭貼
 					</label>
 					<input type="file" id="userPhoto" placeholder="您可以上傳您的檔案" value="file">
