--- a/html/catContent.html
+++ b/html/catContent.html
@@ -110,9 +110,9 @@
 	<div class="right">
 		<div class="container container1">
 			<div class="breadcrumbs">
-				<a href="index.html" class="defaultBtn">尋喵啟事</a> >
-				<a href="catSearch.html" class="defaultBtn">尋喵</a> >
-				<a href="catContent.html" class="defaultBtn">喵航航</a>
+				<a href="index.html" class="defaultBtn" title="前往首頁">尋喵啟事</a> >
+				<a href="catSearch.html" class="defaultBtn" title="前往尋喵">尋喵</a> >
+				<a href="catContent.html" class="defaultBtn" title="瀏覽喵航航">喵航航</a>
 			</div>
 			<picture class="catItem">
 				<div class="img">
