--- a/html/catSearch.html
+++ b/html/catSearch.html
@@ -69,28 +69,28 @@
 	<script src="../js/signUp.js"></script>
 	<header>
 		<div class="logo">
-			<a href="index.html">
+			<a href="index.html" title="尋喵啟事">
 				<h1>
-					<img src="../images/logo_white.png" alt="尋喵啟事" title="回首頁">
+					<img src="../images/logo_white.png" alt="尋喵啟事" title="前往首頁">
 				</h1>
 			</a>
 		</div>
 		<nav>
 			<ul>
 				<li>
-					<a href="./catSearch.html">尋喵</a>
+					<a href="./catSearch.html" title="前往尋喵">尋喵</a>
 				</li>
 				<li>
-					<a href="./halfway_house_search.html">中途之家</a>
+					<a href="./halfway_house_search.html" title="前往中途之家">中途之家</a>
 				</li>
 				<li>
 					<a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
 				</li>
 				<li>
-					<a href="./forum.html">討論區</a>
+					<a href="./forum.html" title="前往討論區">討論區</a>
 				</li>
 				<li>
-					<a href="./member.html">會員專區</a>
+					<a href="./member.html" title="前往會員專區">會員專區</a>
 				</li>
 			</ul>
 		</nav>
@@ -218,7 +218,7 @@
 				<picture class="catItem catItem_1">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_1_resized.jpg" alt="喵航航">
 							</div>
@@ -239,7 +239,7 @@
 				<picture class="catItem catItem_2">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_2_resized.jpg" alt="喵辛巴">
 							</div>
@@ -260,7 +260,7 @@
 				<picture class="catItem catItem_3">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_3_resized.jpg" alt="喵芽芽">
 							</div>
@@ -281,7 +281,7 @@
 				<picture class="catItem catItem_4">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_4_resized.jpg" alt="喵蝦米">
 							</div>
@@ -302,7 +302,7 @@
 				<picture class="catItem catItem_5">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_5_resized.jpg" alt="喵絨絨">
 							</div>
@@ -323,7 +323,7 @@
 				<picture class="catItem catItem_6">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_6_resized.jpg" alt="喵咪醬">
 							</div>
@@ -344,7 +344,7 @@
 				<picture class="catItem catItem_7">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_7_resized.jpg" alt="喵皮皮">
 							</div>
@@ -365,7 +365,7 @@
 				<picture class="catItem catItem_8">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_8_resized.jpg" alt="喵默默">
 							</div>
@@ -386,7 +386,7 @@
 				<picture class="catItem catItem_9">
 					<i class="fa fa-heart-o favorite" aria-hidden="true"></i>
 					<div class="catContent">
-						<a href="catContent.html">
+						<a href="catContent.html" title="瀏覽喵航航">
 							<div class="img">
 								<img src="../images/catUpload/album_img_9_resized.jpg" alt="喵追風">
 							</div>
@@ -407,19 +407,19 @@
 				<script src="../js/cat/like.js"></script>
 			</div>
 			<div class="page">
-				<a href="#">
+				<a href="#1" title="第一頁">
 					<li class="pageNo defaultBtn">1</li>
 				</a>
-				<a href="#">
+				<a href="#2" title="第二頁">
 					<li class="pageNo defaultBtn">2</li>
 				</a>
-				<a href="#">
+				<a href="#3" title="第三頁">
 					<li class="pageNo defaultBtn">3</li>
 				</a>
-				<a href="#">
+				<a href="#4" title="第四頁">
 					<li class="pageNo defaultBtn">4</li>
 				</a>
-				<a href="#">
+				<a href="#5" title="第五頁">
 					<li class="pageNo defaultBtn">5</li>
 				</a>
 			</div>
