--- a/html/Cat_ShoppingStore_food.html
+++ b/html/Cat_ShoppingStore_food.html
@@ -41,22 +41,6 @@
 		<nav>
 			<ul>
 				<li>
-<<<<<<< HEAD
-                    <a href="catSearch.html">尋喵</a>
-                </li>
-                <li>
-                    <a href="halfway_house_search.html">中途之家</a>
-                </li>
-                <li>
-                    <a href="Cat_ShoppingStore.html">商城</a>
-                </li>
-                <li>
-                    <a href="#">討論區</a>
-                </li>
-                <li>
-                    <a href="member.html">會員專區</a>
-                </li>
-=======
 					<a href="./catSearch.html">尋喵</a>
 				</li>
 				<li>
@@ -66,12 +50,11 @@
 					<a href="./Cat_ShoppingStore.html" title="前往商城">商城</a>
 				</li>
 				<li>
-					<a href="./member.html">討論區</a>
+					<a href="./forum.html">討論區</a>
 				</li>
 				<li>
-					<a href="./forum.html">會員專區</a>
+					<a href="./member.html">會員專區</a>
 				</li>
->>>>>>> 29cf21ea1a63a5f572d52c99a6da8e641981d215
 			</ul>
 		</nav>
 		<div class="icons">
