--- a/html/backAdobtRecord.html
+++ b/html/backAdobtRecord.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" title="">會員權限管理</a>
+                    <a href="#" title="">會員帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">員工權限管理</a>
+                    <a href="#" title="">員工帳號管理</a>
                 </li>
                 <li>
                     <a href="#" title="">中途之家審核</a>
