--- a/html/halfMemCatHome.html
+++ b/html/halfMemCatHome.html
@@ -1,39 +1,27 @@
-<div class="memInfo">
-    <h4>修改會員資料</h4>
+<div class="halfMemInfo">
+    <h4>編輯喵喵找到家</h4>
     <form action="" id="form1">
         <table>
             <tr>
-                <th>會員密碼</th>
-                <td>
-                    <input type="psw">
-                </td>
-            </tr>
-            <tr>
-                <th>會員姓名</th>
+                <th>領養者名字</th>
                 <td>
                     <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員暱稱</th>
+                <th>領養的喵喵名字</th>
                 <td>
                     <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員電話</th>
+                <th>想說的話</th>
                 <td>
-                    <input type="tel">
+                    <textarea name="" id="" cols="45" rows="15"></textarea>
                 </td>
             </tr>
             <tr>
-                <th>會員地址</th>
-                <td>
-                    <input type="address">
-                </td>
-            </tr>
-            <tr>
-                <th>會員頭貼</th>
+                <th>喵喵的照片</th>
                 <td>
                     <input type="file">
                 </td>
