--- a/html/halfMemSupport.html
+++ b/html/halfMemSupport.html
@@ -1,41 +1,29 @@
-<div class="memInfo">
-    <h4>修改會員資料</h4>
+<div class="halfMemInfo">
+    <h4>編輯助養資訊</h4>
     <form action="" id="form1">
         <table>
             <tr>
-                <th>會員密碼</th>
-                <td>
-                    <input type="psw">
-                </td>
-            </tr>
-            <tr>
-                <th>會員姓名</th>
+                <th>助養者名字</th>
                 <td>
                     <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員暱稱</th>
+                <th>助養的喵喵名字</th>
                 <td>
                     <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員電話</th>
+                <th>助養金額</th>
                 <td>
-                    <input type="tel">
+                    <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員地址</th>
+                <th>助養時間</th>
                 <td>
-                    <input type="address">
-                </td>
-            </tr>
-            <tr>
-                <th>會員頭貼</th>
-                <td>
-                    <input type="file">
+                    <input type="text">
                 </td>
             </tr>
             <tr>
