--- a/html/halfMeminfo.html
+++ b/html/halfMeminfo.html
@@ -1,39 +1,39 @@
-<div class="memInfo">
-    <h4>修改會員資料</h4>
+<div class="halfMemInfo">
+    <h4>編輯中途之家資料</h4>
     <form action="" id="form1">
         <table>
             <tr>
-                <th>會員密碼</th>
+                <th>中途之家密碼</th>
                 <td>
                     <input type="psw">
                 </td>
             </tr>
             <tr>
-                <th>會員姓名</th>
+                <th>中途之家名稱</th>
                 <td>
                     <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員暱稱</th>
+                <th>中途之家負責人</th>
                 <td>
                     <input type="text">
                 </td>
             </tr>
             <tr>
-                <th>會員電話</th>
+                <th>中途之家電話</th>
                 <td>
                     <input type="tel">
                 </td>
             </tr>
             <tr>
-                <th>會員地址</th>
+                <th>中途之家地址</th>
                 <td>
                     <input type="address">
                 </td>
             </tr>
             <tr>
-                <th>會員頭貼</th>
+                <th>中途之家大頭貼</th>
                 <td>
                     <input type="file">
                 </td>
