--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -69,7 +69,7 @@
                         <option value="">東部</option>
                         <option value="">離島</option>
                     </select>
-                    <input type="text" class="searchBar condition1" placeholder="你知道心儀喵喵的名字嗎？">
+                    <input type="text" class="searchBar condition1" placeholder="喜歡的中途之家的名字">
                     <button type="submit" class="searchBtn defaultBtn">
                         <i class="fa fa-search " aria-hidden="true"></i>
                     </button>
