--- a/html/halfMem.html
+++ b/html/halfMem.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>會員專區</title>
-    <link rel="stylesheet" href="../css/member.css">
+    <title>中途之家會員專區</title>
+    <link rel="stylesheet" href="../css/halfMem.css">
     <script src="https://use.fontawesome.com/533f4a82f0.js"></script>
 </head>
 
-<body onload="getData('memInfo.html');">
+<body onload="getData('halfMeminfo.html');">
     <header>
         <div class="logo">
             <a href="index.html">
@@ -54,25 +54,28 @@
 
     <div class="right">
         <div class="container">
-            <h2>我的會員專區</h2>
+            <h2>我的中途之家會員專區</h2>
             <div class="leftselect">
                 <div class="lefttitle">
                     <img src="../images/left_list_title2.jpg" alt="">
                 </div>
                 <div class="leftlist">
                     <ul>
-                        <li onclick="getData('memInfo.html');" class="li">
-                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 修改會員資料
+                        <li onclick="getData('halfMeminfo.html');" class="li">
+                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 編輯中途之家資料
                         </li>
-                        <li onclick="getData('memOrderlist.html');" class="li">
-                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢訂單記錄
+                        <li onclick="getData('halfMemCat.html');" class="li">
+                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 編輯喵小孩資料
                         </li>
-                        <!-- <li>
-                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 修改/取消訂單
-                        </li> -->
-                        <!-- <li>
-                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 查詢我領養的喵小孩
-                        </li> -->
+                        <li onclick="getData('halfMemCatHome.html');" class="li">
+                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 編輯喵喵找到家
+                        </li>
+                        <li onclick="getData('halfMemAdopt.html');" class="li">
+                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 審核領養案件
+                        </li>
+                        <li onclick="getData('halfMemSupport.html');" class="li">
+                            <i class="fa fa-chevron-circle-right" aria-hidden="true"></i> 編輯助養資訊
+                        </li>
                     </ul>
                 </div>
                 <div class="leftbottom">
@@ -125,11 +128,11 @@
         xhr.open("get", url, true);
         xhr.send(null);
     }
-</script>
+</script>    
 <script>
     let li = document.getElementsByClassName('li');
     for (let i = 0; i < li.length; i++) {
-        li[i].addEventListener('click', function () {
+        li[i].addEventListener('click',function(){
             for (let i = 0; i < li.length; i++) {
                 li[i].style.color = "#c2740f";
             }
