--- a/html/backAdobtRecord.html
+++ b/html/backAdobtRecord.html
@@ -16,10 +16,10 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" title="">會員帳號管理</a>
+                    <a href="backMemManage.html" title="">會員帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">員工帳號管理</a>
+                    <a href="backEmpManage.html" title="">員工帳號管理</a>
                 </li>
                 <li>
                     <a href="#" title="">中途之家審核</a>
@@ -31,10 +31,10 @@
                     <a href="#" title="">訂單管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢領養紀錄</a>
+                    <a href="/html/backAdobtRecord.html" title="">領養紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢銷售紀錄</a>
+                    <a href="#" title="">銷售紀錄查詢</a>
                 </li>
                 <li>
                     <a href="#" title="">寵物商品上下架</a>
