--- a/html/backEmpManage.html
+++ b/html/backEmpManage.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/backEmpManage.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>員工帳號管理</title>
 </head>
 
 <body>
@@ -15,28 +15,28 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" title="">會員帳號管理</a>
+                    <a href="backMemManage.html" title="會員帳號管理">會員帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">員工帳號管理</a>
+                    <a href="backEmpManage.html" title="員工帳號管理">員工帳號管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">中途之家審核</a>
+                    <a href="#" title="中途之家審核">中途之家審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">檢舉審核</a>
+                    <a href="#" title="檢舉審核">檢舉審核</a>
                 </li>
                 <li>
-                    <a href="#" title="">訂單管理</a>
+                    <a href="#" title="訂單管理">訂單管理</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢領養紀錄</a>
+                    <a href="/html/backAdobtRecord.html" title="領養紀錄查詢">領養紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">查詢銷售紀錄</a>
+                    <a href="#" title="銷售紀錄查詢">銷售紀錄查詢</a>
                 </li>
                 <li>
-                    <a href="#" title="">寵物商品上下架</a>
+                    <a href="#" title="寵物商品上下架">寵物商品上下架</a>
                 </li>
             </ul>
         </nav>
@@ -48,7 +48,7 @@
             </div>
             <div class="empManage">
                 <button id="newEmp" class="defaultBtn">新增員工帳號</button>
-                <from>
+                <form>
                     <table>
                         <tr class="newEmpTR newEmpTROff" id="abc">
                             <th>員工帳號</th>
@@ -71,108 +71,113 @@
                                 </select>
                             </td>
                             <td>
-                                <i class="fa fa-circle-o" aria-hidden="true" id="ensureBtn"></i>
+                                <input type="submit" value="確認新增">
+                                <input type="reset" value="清除內容">
                             </td>
                         </tr>
-                        <tr>
-                            <th>員工帳號</th>
-                            <th>員工密碼</th>
-                            <th>員工職位</th>
-                            <th>員工帳號刪除</th>
-                        </tr>
+                </form>
+                <form action="#">
+                    <tr>
+                        <th>員工帳號</th>
+                        <th>員工密碼</th>
+                        <th>員工職位</th>
+                        <th>員工帳號移除</th>
+                    </tr>
 
-                        <tr>
-                            <td>
-                                <input type="text" id="empId1">
-                            </td>
-                            <td>
-                                <input type="password" name="empPsw" id="empPsw1">
-                            </td>
-                            <td>
-                                <select name="EmpOffice" id="EmpOffice1">
-                                    <option value="">Supper Admin</option>
-                                    <option value="">Sales</option>
-                                    <option value="">RD</option>
-                                </select>
-                            </td>
-                            <td>
-                                <i class="fa fa-times cancel"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="text" id="empId2">
-                            </td>
-                            <td>
-                                <input type="password" name="empPsw" id="empPsw2">
-                            </td>
-                            <td>
-                                <select name="EmpOffice" id="EmpOffice2">
-                                    <option value="">Supper Admin</option>
-                                    <option value="">Sales</option>
-                                    <option value="">RD</option>
-                                </select>
-                            </td>
-                            <td>
-                                <i class="fa fa-times cancel"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="text" id="empId3">
-                            </td>
-                            <td>
-                                <input type="password" name="empPsw" id="empPsw3">
-                            </td>
-                            <td>
-                                <select name="EmpOffice" id="EmpOffice3">
-                                    <option value="">Supper Admin</option>
-                                    <option value="">Sales</option>
-                                    <option value="">RD</option>
-                                </select>
-                            </td>
-                            <td>
-                                <i class="fa fa-times cancel"></i>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <input type="text" id="empId4">
-                            </td>
-                            <td>
-                                <input type="password" name="empPsw" id="empPsw4">
-                            </td>
-                            <td>
-                                <select name="EmpOffice" id="EmpOffice4">
-                                    <option value="">Supper Admin</option>
-                                    <option value="">Sales</option>
-                                    <option value="">RD</option>
-                                </select>
-                            </td>
-                            <td>
-                                <i class="fa fa-times cancel"></i>
-                            </td>
-                        </tr>
-                        <tr id="trLast">
-                            <td>
-                                <input type="text" id="empId5">
-                            </td>
-                            <td>
-                                <input type="password" name="empPsw" id="empPsw5">
-                            </td>
-                            <td>
-                                <select name="EmpOffice" id="EmpOffice5">
-                                    <option value="">Supper Admin</option>
-                                    <option value="">Sales</option>
-                                    <option value="">RD</option>
-                                </select>
-                            </td>
-                            <td>
-                                <i class="fa fa-times cancel"></i>
-                            </td>
-                        </tr>
+                    <tr>
+                        <td>
+                            <input type="text" id="empId1">
+                        </td>
+                        <td>
+                            <input type="password" name="empPsw" id="empPsw1">
+                        </td>
+                        <td>
+                            <select name="EmpOffice" id="EmpOffice1">
+                                <option value="">Supper Admin</option>
+                                <option value="">Sales</option>
+                                <option value="">RD</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="" id="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" id="empId2">
+                        </td>
+                        <td>
+                            <input type="password" name="empPsw" id="empPsw2">
+                        </td>
+                        <td>
+                            <select name="EmpOffice" id="EmpOffice2">
+                                <option value="">Supper Admin</option>
+                                <option value="">Sales</option>
+                                <option value="">RD</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="" id="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" id="empId3">
+                        </td>
+                        <td>
+                            <input type="password" name="empPsw" id="empPsw3">
+                        </td>
+                        <td>
+                            <select name="EmpOffice" id="EmpOffice3">
+                                <option value="">Supper Admin</option>
+                                <option value="">Sales</option>
+                                <option value="">RD</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="" id="">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="text" id="empId4">
+                        </td>
+                        <td>
+                            <input type="password" name="empPsw" id="empPsw4">
+                        </td>
+                        <td>
+                            <select name="EmpOffice" id="EmpOffice4">
+                                <option value="">Supper Admin</option>
+                                <option value="">Sales</option>
+                                <option value="">RD</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="" id="">
+                        </td>
+                    </tr>
+                    <tr id="trLast">
+                        <td>
+                            <input type="text" id="empId5">
+                        </td>
+                        <td>
+                            <input type="password" name="empPsw" id="empPsw5">
+                        </td>
+                        <td>
+                            <select name="EmpOffice" id="EmpOffice5">
+                                <option value="">Supper Admin</option>
+                                <option value="">Sales</option>
+                                <option value="">RD</option>
+                            </select>
+                        </td>
+                        <td>
+                            <input type="checkbox" name="" id="">
+                        </td>
+                    </tr>
                     </table>
-                </from>
+                    <input type="submit" value="確認送出" class="defaultBtn">
+                    <input type="reset" value="重設全部" class="defaultBtn">
+                </form>
             </div>
         </div>
     </div>
@@ -180,8 +185,8 @@
         window.addEventListener('load', function () {
             const newEmp = document.getElementById('newEmp');
             newEmp.addEventListener('click', function newEmp() {
-                const newEmp = document.getElementById('newEmp');
-                const tr = document.getElementsByClassName('newEmpTR');
+                const newEmp = document.getElementById('newEmp')
+                const tr = document.getElementsByClassName('newEmpTR')
                 if (tr[0].className.match('newEmpTROff') && tr[1].className.match('newEmpTROff')) {
                     tr[0].className =
                         tr[0].className.replace
@@ -189,7 +194,7 @@
                     tr[1].className =
                         tr[1].className.replace
                             ('newEmpTROff', 'newEmpTROn')
-                    newEmp.innerText = '取消新增';
+                    newEmp.innerText = '取消新增員工'
                 } else {
                     tr[0].className =
                         tr[0].className.replace
@@ -197,14 +202,14 @@
                     tr[1].className =
                         tr[1].className.replace
                             ('newEmpTROn', 'newEmpTROff')
-                    newEmp.innerText = '新增員工帳號';
+                    newEmp.innerText = '新增員工帳號'
                 }
             })
             const ensureBtn = document.getElementById('ensureBtn')
             ensureBtn.addEventListener('click', function () {
                 confirm('您確定要新增嗎?')
             })
-            
+
         })
     </script>
 </body>
